<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>project_03</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="blucas@endicott.edu">root</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- Build dependencies for generating messages -->
  <build_depend>rosidl_default_generators</build_depend>
  <!-- Runtime dependencies for message generation -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Dependencies on other ROS packages -->
  <depend>ament_index_cpp</depend>
  <depend>turtlesim</depend>
  <depend>geometry_msgs</depend>
  <depend>endicott_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
   <!-- <member_of_group>rosidl_interface_packages</member_of_group> -->
  </export>
</package>