<?xml version="1.0"?>
<package format="3">
  <name>turtlebot3_Project01</name>
  <version>0.1.0</version>
  <description>Custom navigation and target input nodes for TurtleBot3.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Core build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime + build dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Launch support -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Optional: Linting/testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
